Don't use method not available in Java 11
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/1016-cfa-network-checker@42728 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c